scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest26b.scr
module good.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest26b;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<z:=0>"
{
	1(x:int) from A to B;
	do Proto1(A, B); @"<(z+1)>"  // testing compacting"
}
//*/
