scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/assrtprog/AssrtCoreTest12.scr
module bad.extensions.assrtcore.safety.assrtprog.AssrtCoreTest12;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<z:=0> z=0||z=1"
{
	1(x:int) from A to B; @"((x=z) && (x=0))"
	2(y:int) from B to A; @"(y>x)"
	do Proto1(A, B);  @"<1>"  // Assert-prog error and unsat
}
//*/
